kustomize.example/blazar/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "blazar-api"
  namespace: openstack
  labels:
    release_group: blazar
    application: blazar
    component: api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: blazar
      component: api
      release_group: blazar
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        application: blazar
        component: api
        release_group: blazar
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: release_group
                  operator: In
                  values:
                  - blazar
                - key: application
                  operator: In
                  values:
                  - blazar
                - key: component
                  operator: In
                  values:
                  - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-etc-blazar
          emptyDir: {}
        - name: blazar-data
          configMap:
            name: "blazar-configmap"
            defaultMode: 0555
      containers:
      - name: blazar-api
        image: "ghcr.io/sowm9802/blazar:1.16"
        imagePullPolicy: IfNotPresent
        command: ["bash", "-c"]
        args:
            - |
              /tmp/blazar-conf-setup.sh &&
              /tmp/blazar-resource-create.sh &&
              /tmp/blazar-db-migrate.sh &&
              /tmp/blazar-service-init.sh
        volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-etc-blazar
              mountPath: /etc/blazar
              readOnly: false
            - name: blazar-data
              mountPath: /tmp/blazar-conf-setup.sh
              subPath: blazar-conf-setup.sh
              readOnly: true
            - name: blazar-data
              mountPath: /tmp/blazar-resource-create.sh
              subPath: blazar-resource-create.sh
              readOnly: true
            - name: blazar-data
              mountPath: /tmp/blazar-db-migrate.sh
              subPath: blazar-db-migrate.sh
              readOnly: true
            - name: blazar-data
              mountPath: /tmp/blazar-service-init.sh
              subPath: blazar-service-init.sh
              readOnly: true
